# mcp_arxiv_query

./: Dockerfile  Dockerfile_dev  INSTALL.md  README.md  UPGRADE_GUIDE.md  build_and_test.sh  build_dev_image.sh  build_image.sh  build_image_dev.sh  claude_desktop_config.json  download_test.py  fix_permissions.sh  make_executable.sh  pyproject.toml  rebuild_and_run.sh  run_MCP_nspector.sh  run_dev.sh  run_inspector.sh  setup.sh
setup/: build_and_test.sh  build_image.sh  check_server.py  count_lines.py  download_test.py  fix_permissions.sh  make_executable.sh  setup.sh
src/mcp_arxiv_query/: __init__.py  __main__.py  arxiv_service.py  downloader.py  logger.py  pdf_utils.py  rate_limiter.py  server.py  tools.py
src/tests/: __init__.py  test_server.py
